fix: button text align

--- a/src/pages/home/index.module.scss
+++ b/src/pages/home/index.module.scss
@@ -106,6 +106,7 @@
           );
           text-decoration: none;
           color: $quinary-text-color;
+          text-align: center;
         }
       }
     }
